logs/geobricksrastercorrelation.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GeobricksRasterCorrelation-0.1.13.egg-info'...
Listing './lib/python3.5/site-packages/geobricks_raster_correlation'...
Listing './lib/python3.5/site-packages/geobricks_raster_correlation/cli'...
Compiling './lib/python3.5/site-packages/geobricks_raster_correlation/cli/cli_argh.py'...
***   File "./lib/python3.5/site-packages/geobricks_raster_correlation/cli/cli_argh.py", line 10
    print "Series: ", corr['series']
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/geobricks_raster_correlation/config'...
Listing './lib/python3.5/site-packages/geobricks_raster_correlation/core'...
Compiling './lib/python3.5/site-packages/geobricks_raster_correlation/core/colors.py'...
***   File "./lib/python3.5/site-packages/geobricks_raster_correlation/core/colors.py", line 10
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/geobricks_raster_correlation/core/raster_correlation_core.py'...
***   File "./lib/python3.5/site-packages/geobricks_raster_correlation/core/raster_correlation_core.py", line 29
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/geobricks_raster_correlation/core/raster_correlation_core_gdal.py'...
***   File "./lib/python3.5/site-packages/geobricks_raster_correlation/core/raster_correlation_core_gdal.py", line 29
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geobricks_raster_correlation/rest'...
Compiling './lib/python3.5/site-packages/geobricks_raster_correlation/rest/raster_correlation_rest.py'...
***   File "./lib/python3.5/site-packages/geobricks_raster_correlation/rest/raster_correlation_rest.py", line 33
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
